Fixed package.json string error

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   ],
   "contributors": [
     {
-      "name": "Jacob Fiksel"
-      "email": "jfiksel@gmail.com"
+      "name": "Jacob Fiksel",
+      "email": "jfiksel@gmail.com",
       "name": "Dustin Speckhals",
       "email": "dustin1114@gmail.com"
     }
